@@ -148,6 +148,10 @@ static bool XAinst_ok(const assignment &a, unsigned short int i, const G_t &G, c
   bool unused_X = (ia.registers[REG_X][1] < 0);
   bool unused_A = (ia.registers[REG_A][1] < 0);
 
+  // Todo: Allow more use of h
+  if (ia.registers[REG_H][1] >= 0 && I[ia.registers[REG_H][1]].size <= 1 || ia.registers[REG_H][0] >= 0 && I[ia.registers[REG_H][0]].size <= 1 )
+    return(false);
+
   if(unused_X && unused_A)
     return(true);
 
@@ -203,6 +207,28 @@ static bool XAinst_ok(const assignment &a, unsigned short int i, const G_t &G, c
     return(true);
 
   return(false);
+}
+
+template <class G_t, class I_t>
+static void set_surviving_regs(const assignment &a, unsigned short int i, const G_t &G, const I_t &I)
+{
+  iCode *ic = G[i].ic;
+  
+  ic->rSurv = newBitVect(NUM_REGS);
+  
+  std::set<var_t>::const_iterator v, v_end;
+  for (v = G[i].alive.begin(), v_end = G[i].alive.end(); v != v_end; ++v)
+    if(G[i].dying.find(*v) == G[i].dying.end())
+      if(!((IC_RESULT(ic) && !POINTER_SET(ic)) && IS_SYMOP(IC_RESULT(ic)) && OP_SYMBOL_CONST(IC_RESULT(ic))->key == I[*v].v))
+        ic->rSurv = bitVectSetBit(ic->rSurv, a.global[*v]);
+}
+
+template<class G_t>
+static void unset_surviving_regs(unsigned short int i, const G_t &G)
+{
+  iCode *ic = G[i].ic;
+  
+  freeBitVect(ic->rSurv);
 }
 
 template <class G_t, class I_t>
@@ -315,7 +341,9 @@ static float instruction_cost(const assignment &a, unsigned short int i, const G
     case CRITICAL:
     case ENDCRITICAL:
       assign_operands_for_cost(a, i, G, I);
+      set_surviving_regs(a, i, G, I);
       c = dryhc08iCode(ic);
+      unset_surviving_regs(i, G);
       return(c);
     default:
       return(0.0f);
@@ -417,8 +445,8 @@ static bool tree_dec_ralloc(T_t &T, G_t &G, const I_t &I)
         }
     }
 
-  //for(unsigned int i = 0; i < boost::num_vertices(G); i++)
-  //  set_surviving_regs(winner, i, G, I);	// Never freed. Memory leak?
+  for(unsigned int i = 0; i < boost::num_vertices(G); i++)
+    set_surviving_regs(winner, i, G, I);	// Never freed. Memory leak?
 
   return(!assignment_optimal);
 }
